ingess_example/node_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-access-log: "false"
    ## This is optional and relevant to GKE only
    kubernetes.io/ingress.global-static-ip-name: "name_of_external_ip"
  name: opereto-lb
spec:
  tls:
  - hosts:
    - ssl.example.com
    secretName: clustersecret
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: opereto-web
          servicePort: 8080
    host: ssl.example.com
